<resources>
    <string name="app_name">StayFit</string>
    <string name="server_client_id">1043149620687-uqtolq9522qpedu5irs3c74ot5d155ve.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="connect">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="save">Save</string>
    <string name="Steps">Steps</string>
    <string name="Calories">Calories</string>
    <string name="max_steps">max steps per day</string>
    <string name="max_calories">Max calories per day</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="error_max_steps_calories">Please add max steps you want to run and max calories you want to burn in a day</string>
    <string name="error_max_steps_blank">Targeted number of steps per day can\'t be zero.</string>
    <string name="error_max_calories_blank">Targeted calories burnt per day can\'t be zero.</string>
    <string name="error_fetch_profile">Something went wrong while fetching profile, Please try again</string>
    <string name="msg_storage_permission">Sorry, We required this permission to share your data.</string>
    <string name="today">Today</string>
    <string name="inch">Feet</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>
    <string name="content_login_image">Login Image</string>
    <string name="content_splash_image">Splash Image</string>
    <string name="zero">0</string>
    <string name="content_user_image">User Image</string>
    <string name="checkout_str">Checkout my today\'s steps and calories</string>
    <string name="share_msg">Share today\'s activity</string>
    <string name="res">estimated_steps</string>
    <string name="package_name">com.google.android.gms</string>
    <string name="get_res">com.google.step_count.delta</string>
    <string name="logo_path">file:///android_asset/logo_fit.gif</string>
    <string name="default_value">0</string>
    <string name="alert">Alert</string>

</resources>
