<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.fitness.ui.LoginActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:contentDescription="@string/content_login_image"
        android:layout_height="@dimen/_240sdp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_fit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/default_text_size_very_big" />

    <Button
        android:id="@+id/btn_login"
        fontPath="Raleway-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

</RelativeLayout>
